--- a/src/styles/skills.module.css
+++ b/src/styles/skills.module.css
@@ -9,7 +9,7 @@
 
 .icons>div>div {
     text-align: center;
-    padding: 10px;
+    padding: 20px;
 }
 
 .circle {
